--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 
+
 .carousel-caption {
 	bottom: 220px;
 }
-.carousel-caption h5 {
+
+.carousel-caption h1 {
 	font-size: 45px;
 	text-transform: uppercase;
 	letter-spacing: 2px;
@@ -16,6 +18,7 @@
 	text-transform: uppercase;
 	font-weight: bold;
 }
+
 .navbar-light .navbar-brand {
 	color: #fff;
 	font-size: 25px;
@@ -23,47 +26,44 @@
 	font-weight: bold;
 	letter-spacing: 2px;
 }
+
 .navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
 	color: #fff;
 }
+
 .navbar-light .navbar-nav .nav-link {
 	color: #fff;
 }
+
 .navbar-nav {
 	text-align: center;
 }
+
 .nav-link {
 	padding: .2rem 1rem;
 }
+
 .nav-link.active, .nav-link:focus {
 	color: #fff;
 }
+
 .navbar-toggler {
 	padding: 1px 5px;
 	font-size: 18px;
 	line-height: 0.3;
 	background: #fff;
 }
+
 .navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
 	color: #fff;
 }
+
 .w-100 {
 	height: 100vh;
 }
-@media only screen and (max-width: 767px) {
-	.navbar-nav.ml-auto {
-		background: rgba(0, 0, 0, 0.5);
-	}
-	.navbar-nav a {
-		font-size: 14px;
-		font-weight: normal;
-	}
-}
 
 
-
-
-
+/* Début bouton inscription */
 
 .button{
 	border-radius: 100px;
@@ -109,4 +109,63 @@
 .button:hover span:after {
 	opacity: 1;
 	right: 0;
+}
+
+/* Fin bouton inscription */
+
+
+
+
+@media only screen and (max-width: 767px) {
+	.navbar-nav.ml-auto {
+		background: rgba(0, 0, 0, 0.5);
+	}
+	.navbar-nav a {
+		font-size: 14px;
+		font-weight: normal;
+	}
+
+}
+
+
+@import url('https://fonts.googleapis.com/css?family=Rubik&display=swap');
+
+body {
+    background: linear-gradient(0deg, #fff, 50%, #DEEEFE);
+    font-family: 'Rubik', sans-serif;
+    background: #455A64;
+    height: 100 !important
+}
+
+.container-fluid {
+    overflow: hidden;
+    margin-top: 250px;
+    background: #262626;
+    color: #627482 !important;
+    margin-bottom: 0;
+    padding-bottom: 0
+}
+
+small {
+    font-size: calc(12px + (15 - 12) * ((100vw - 360px) / (1600 - 360))) !important
+}
+
+.bold-text {
+    color: #989c9e !important
+}
+
+.mt-55 {
+    margin-top: calc(50px + (60 - 50) * ((100vw - 360px) / (1600 - 360))) !important
+}
+
+h3 {
+    font-size: calc(34px + (40 - 34) * ((100vw - 360px) / (1600 - 360))) !important
+}
+
+.social {
+    font-size: 21px !important
+}
+
+.rights {
+    font-size: calc(10px + (12 - 10) * ((100vw - 360px) / (1600 - 360))) !important
 }
