--- a/css/footer.css
+++ b/css/footer.css
@@ -3,7 +3,7 @@
 body {
     background: linear-gradient(0deg, #fff, 50%, #DEEEFE);
     font-family: 'Rubik', sans-serif;
-    /*background: #455A64;*/
+    background: #455A64;
     height: 100 !important
 }
 
