--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
-
+.bgcolor.scrolled {
+	background-color:black;
+}
 
 .carousel-caption {
 	bottom: 220px;
@@ -59,7 +61,7 @@
 }
 
 .w-100 {
-	height: 100vh;
+	height: 100%;
 }
 
 
