--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,19 @@
 	bottom: 220px;
 }
 
+.carousel-caption {
+	margin-top: 15em;
+}
+
 .carousel-caption h1 {
 	font-size: 45px;
 	text-transform: uppercase;
 	letter-spacing: 2px;
-	margin-top: 25px;
+	margin-top: 5em;
 	font-family: merienda;
 }
+
+/* Début NavBar */
 
 .navbar-nav a {
 	font-family: poppins;
@@ -63,6 +69,19 @@
 .w-100 {
 	height: 100%;
 }
+
+@media only screen and (max-width: 767px) {
+	.navbar-nav.ml-auto {
+		background: rgba(0, 0, 0, 0.5);
+	}
+	.navbar-nav a {
+		font-size: 14px;
+		font-weight: normal;
+	}
+
+}
+
+/* Fin NavBar */
 
 
 /* Début bouton inscription */
@@ -115,16 +134,63 @@
 
 /* Fin bouton inscription */
 
+/* Début footer */
 
+@import url('https://fonts.googleapis.com/css?family=Rubik&display=swap');
 
-
-@media only screen and (max-width: 767px) {
-	.navbar-nav.ml-auto {
-		background: rgba(0, 0, 0, 0.5);
-	}
-	.navbar-nav a {
-		font-size: 14px;
-		font-weight: normal;
-	}
-
+body {
+    background: linear-gradient(0deg, #fff, 50%, #DEEEFE);
+    font-family: 'Rubik', sans-serif;
+    background: transparent;
+    height: 100 !important
 }
+
+.container-fluid {
+    overflow: hidden;
+    margin-top: 250px;
+    background: #262626;
+    color: transparent !important;
+    margin-bottom: 0;
+    padding-bottom: 0
+}
+
+small {
+    font-size: calc(12px + (15 - 12) * ((100vw - 360px) / (1600 - 360))) !important
+}
+
+.bold-text {
+    color: #989c9e !important
+}
+
+.mt-55 {
+    margin-top: calc(50px + (60 - 50) * ((100vw - 360px) / (1600 - 360))) !important
+}
+
+h3 {
+    font-size: calc(34px + (40 - 34) * ((100vw - 360px) / (1600 - 360))) !important
+}
+
+.social {
+    font-size: 21px !important
+}
+
+.rights {
+    font-size: calc(10px + (12 - 10) * ((100vw - 360px) / (1600 - 360))) !important
+}
+
+/* Fin footer */
+
+
+@media only screen and (max-width: 1280px) {
+
+	.carousel-caption {
+		visibility: hidden;
+	}
+
+	.animated {
+		visibility: visible;
+	}
+}
+
+
+
