--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,14 @@ html, body{
 	border: 0;
 }
 
+
 /* Début de Haut de page */
 
 .carousel-caption {
 	top: 275px;
 }
 
-.carousel-caption h1 h2 {
+.carousel-caption h1 {
 	font-size: 45px;
 	text-transform: uppercase;
 	letter-spacing: 2px;
@@ -38,7 +39,7 @@ html, body{
 h2 {
 	text-align: center;
 	margin-top: 2em;
-	margin-bottom: 5em;
+	margin-bottom: 10px;
 	text-transform: uppercase;
 	font-family: 'Trebuchet MS', Helvetica, sans-serif;
 	font-size: 45px;
@@ -51,6 +52,32 @@ h2 {
 	max-height: 100%;
 	border-radius: 30px;
 }
+
+.icon {
+	width: 60px auto;
+	margin-bottom: 9em;
+	display: block;
+    width: 6em;
+	color: #2C3E50;
+	text-align: center;
+}
+
+hr{
+	margin: 90px 0 0;
+	width: 10%;
+	height: 5px;
+	background-color: #2c3e50;
+	border-radius: 20px;
+}
+
+hr.gauche {
+	float: left;
+}
+
+hr.droite {
+	float: right;
+}
+
 
 /* Fin Contenu de la page */
 
@@ -174,6 +201,7 @@ h2 {
 }
 
 /* Fin bouton inscription */
+
 
 /* Début footer */
 
