--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,8 @@
-html, body{
-    margin: 0;
+html, body {
+	margin: 0;
 	padding: 0;
 	border: 0;
 }
-
 
 /* Début de Haut de page */
 
@@ -24,15 +23,86 @@ html, body{
 }
 
 @media only screen and (max-width: 1280px) {
-
 	.carousel-caption {
 		top: auto;
 	}
-
 }
 
-/* Fin Haut de page */
 
+/* Début titre animation */
+
+/*Neon*/
+
+
+a {
+	text-decoration: none;
+	-webkit-transition: all 0.5s;
+	-moz-transition: all 0.5s;
+	transition: all 0.5s;
+}
+
+.title {
+	font-size: 90px;
+}
+
+p:nth-child(1) a {
+	color: #FFFFFF;
+	font-family: Pacifico;
+}
+
+p:nth-child(1) a {
+	-webkit-animation: neon3 1.5s  infinite ;
+	-moz-animation: neon3 1.5s  infinite ;
+	animation: neon3 1.5s  infinite ;
+}
+
+p a {
+	color: rgb(137, 201, 227)fff;
+}
+
+/*glow for webkit*/
+
+@-webkit-keyframes neon3 {
+	from {
+		text-shadow: 0 0 10px rgb(137, 201, 227), 0 0 20px rgb(137, 201, 227), 0 0 30px rgb(137, 201, 227), 0 0 40px rgb(137, 201, 227), 0 0 70px rgb(137, 201, 227), 0 0 80px rgb(137, 201, 227), 0 0 100px rgb(137, 201, 227), 0 0 150px rgb(137, 201, 227);
+	}
+	to {
+		text-shadow: 0 0 5px rgb(137, 201, 227), 0 0 10px rgb(137, 201, 227), 0 0 15px rgb(137, 201, 227), 0 0 20px rgb(137, 201, 227), 0 0 35px rgb(137, 201, 227), 0 0 40px rgb(137, 201, 227), 0 0 50px rgb(137, 201, 227), 0 0 75px rgb(137, 201, 227);
+	}
+}
+
+@-moz-keyframes neon3 {
+	from {
+		text-shadow: 0 0 10px rgb(137, 201, 227), 0 0 20px rgb(137, 201, 227), 0 0 30px rgb(137, 201, 227), 0 0 40px rgb(137, 201, 227), 0 0 70px rgb(137, 201, 227), 0 0 80px rgb(137, 201, 227), 0 0 100px rgb(137, 201, 227), 0 0 150px rgb(137, 201, 227);
+	}
+	to {
+		text-shadow: 0 0 5px rgb(137, 201, 227), 0 0 10px rgb(137, 201, 227), 0 0 15px rgb(137, 201, 227), 0 0 20px rgb(137, 201, 227), 0 0 35px rgb(137, 201, 227), 0 0 40px rgb(137, 201, 227), 0 0 50px rgb(137, 201, 227), 0 0 75px rgb(137, 201, 227);
+	}
+}
+
+@keyframes neon3 {
+	from {
+		text-shadow: 0 0 10px rgb(137, 201, 227), 0 0 20px rgb(137, 201, 227), 0 0 30px rgb(137, 201, 227), 0 0 40px rgb(137, 201, 227), 0 0 70px rgb(137, 201, 227), 0 0 80px rgb(137, 201, 227), 0 0 100px rgb(137, 201, 227), 0 0 150px rgb(137, 201, 227);
+	}
+	to {
+		text-shadow: 0 0 5px rgb(137, 201, 227), 0 0 10px rgb(137, 201, 227), 0 0 15px rgb(137, 201, 227), 0 0 20px rgb(137, 201, 227), 0 0 35px rgb(137, 201, 227), 0 0 40px rgb(137, 201, 227), 0 0 50px rgb(137, 201, 227), 0 0 75px rgb(137, 201, 227);
+	}
+}
+
+/*REEEEEEEEEEESPONSIVE*/
+
+@media (max-width: 650px) {
+	#container {
+		width: 100%;
+	}
+	p {
+		font-size: 3.5em;
+	}
+}
+
+/* Fin du titre  */
+
+/* Fin Haut de page */
 
 /* Début Contenu de la page */
 
@@ -57,12 +127,12 @@ h2 {
 	width: 60px auto;
 	margin-bottom: 9em;
 	display: block;
-    width: 6em;
+	width: 6em;
 	color: #2C3E50;
 	text-align: center;
 }
 
-hr{
+hr {
 	margin: 90px 0 0;
 	width: 10%;
 	height: 5px;
@@ -78,14 +148,12 @@ hr.droite {
 	float: right;
 }
 
-
 /* Fin Contenu de la page */
-
 
 /* Début NavBar */
 
 .bgcolor.scrolled {
-	background-color:black;
+	background-color: black;
 }
 
 .navbar-nav a {
@@ -96,7 +164,7 @@ hr.droite {
 }
 
 .navbar-light .navbar-brand {
-	color: #fff;
+	color: rgb(137, 201, 227);
 	font-size: 25px;
 	text-transform: uppercase;
 	font-weight: bold;
@@ -104,11 +172,11 @@ hr.droite {
 }
 
 .navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
-	color: #fff;
+	color: rgb(137, 201, 227);
 }
 
 .navbar-light .navbar-nav .nav-link {
-	color: #fff;
+	color: rgb(137, 201, 227);
 }
 
 .navbar-nav {
@@ -120,18 +188,18 @@ hr.droite {
 }
 
 .nav-link.active, .nav-link:focus {
-	color: #fff;
+	color: rgb(137, 201, 227);
 }
 
 .navbar-toggler {
 	padding: 1px 5px;
 	font-size: 18px;
 	line-height: 0.3;
-	background: #fff;
+	background: rgb(137, 201, 227);
 }
 
 .navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
-	color: #fff;
+	color: rgb(137, 201, 227);
 }
 
 .w-100 {
@@ -146,15 +214,13 @@ hr.droite {
 		font-size: 14px;
 		font-weight: normal;
 	}
-
 }
 
 /* Fin NavBar */
 
-
 /* Début bouton inscription */
 
-.button{
+.button {
 	border-radius: 100px;
 	background-color: transparent;
 	border: 2px solid white;
@@ -166,21 +232,21 @@ hr.droite {
 	padding: 4px 50px 4px 50px;
 	margin-bottom: 56px;
 }
-  
-.button a{
+
+.button a {
 	text-decoration: none;
 	color: white;
 	font-weight: 600;
 	font-family: "Raleway", sans-serif;
 }
-  
+
 .button span {
 	cursor: pointer;
 	display: inline-block;
 	position: relative;
 	transition: 0.3s;
 }
-  
+
 .button span:after {
 	content: '\2BC8';
 	font-size: 10px;
@@ -190,18 +256,17 @@ hr.droite {
 	right: -20px;
 	transition: 0.3s;
 }
-  
+
 .button:hover span {
 	padding-right: 25px;
 }
-  
+
 .button:hover span:after {
 	opacity: 1;
 	right: 0;
 }
 
 /* Fin bouton inscription */
-
 
 /* Début footer */
 
@@ -214,17 +279,17 @@ body {
 }
 
 .logo-footer {
-	margin-bottom: 40px; 
+	margin-bottom: 40px;
 }
 
 footer {
-	color: grey; 
+	color: grey;
 }
 
-footer p, a {
+/* footer p, a {
 	font-size: 12px;
 	font-family: 'Roboto', sans-serif;
-}
+} */
 
 footer h6 {
 	font-family: 'Playfair Display', serif;
@@ -243,7 +308,7 @@ footer h6:after {
 }
 
 .btn-footer {
-	color: grey;	  
+	color: grey;
 	text-decoration: none;
 	border: 1px solid;
 	border-radius: 43px;
@@ -252,7 +317,7 @@ footer h6:after {
 	line-height: 47px;
 }
 
-.btn-footer:hover {		
+.btn-footer:hover {
 	text-decoration: none;
 }
 
@@ -261,7 +326,6 @@ footer h6:after {
 	border-radius: 16px 0 0 16px;
 	outline: none;
 	padding-left: 10px;
-
 }
 
 ::placeholder {
@@ -272,9 +336,9 @@ footer h6:after {
 
 .form-footer input[type="button"] {
 	border: none;
-	background:#232323;
+	background: #232323;
 	margin-left: -5px;
-	color: #fff;
+	color: rgb(137, 201, 227);
 	outline: none;
 	border-radius: 0 16px 16px 0;
 	padding: 2px 12px;
@@ -292,14 +356,14 @@ footer ul li {
 	display: block;
 }
 
-footer ul  {
+footer ul {
 	padding-left: 0;
 }
 
-footer ul  li a {
+footer ul li a {
 	text-decoration: none;
 	color: grey;
-	text-decoration:none;
+	text-decoration: none;
 }
 
 a:hover {
@@ -313,3 +377,20 @@ a:hover {
 }
 
 /* Fin footer */
+
+body {
+	background: #f4f4f4;
+}
+
+.banner {
+	background: #a770ef;
+	background: -webkit-linear-gradient(to right, #a770ef, #cf8bf3, #fdb99b);
+	background: linear-gradient(to right, #a770ef, #cf8bf3, #fdb99b);
+}
+
+.display-4 {
+	text-align: center;
+	text-transform: uppercase;
+	color: black;
+}
+
