--- a/views/authetification.ejs
+++ b/views/authetification.ejs
@@ -3,7 +3,7 @@
 
 <head>
    <meta charset="UTF-8">
-   <title>No Brain No Gain - Login</title>
+   <title>No Brain No Gain</title>
 
    <link rel="icon" type="image/png" href="./img/logo.png">
    <link href="https://fonts.googleapis.com/css2?family=Merienda&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
    <!-- Fichier CSS version TEST-->
 
    <link href="./css/login.css" rel="stylesheet">
-  
+
 </head>
 
 <body>
@@ -28,7 +28,7 @@
 
    <div class="container" id="container">
        <div class="form-container sign-up-container">
-           <form method="POST">
+           <form action="#">
                <h1>Créer un compte</h1>
                <div class="social-container">
                    <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
@@ -36,14 +36,14 @@
                    <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
                </div>
                <span>ou utilisez votre email pour vous connecter</span>
-               
-               <input type="email" placeholder="Email" name="emailRegister"/>
-               <input type="password" placeholder="Mot de passe" name="passwordRegister"/>
+               <input type="texte" placeholder="Nom" />
+               <input type="email" placeholder="Email" />
+               <input type="mot de passe" placeholder="Mot de passe" />
                <button>Inscrivez-vous!</button>
            </form>
        </div>
        <div class="form-container sign-in-container">
-           <form method="POST">
+           <form action="#">
                <h1>Connectez vous</h1>
                <div class="social-container">
                    <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
@@ -51,10 +51,10 @@
                    <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
                </div>
                <span>ou utilisez votre compte</span>
-               <input type="email" placeholder="Email" name="emailLogin" />
-               <input type="password" placeholder="Mot de passe" name="passwordLogin"/>
+               <input type="email" placeholder="Email" name="email" />
+               <input type="mot de passe" placeholder="Mot de passe" name="password"/>
                <a href="#">Mot de passe oublié</a>
-               <button type="submit">Se connecter</button>
+               <button>Se connecter</button>
            </form>
        </div>
        <div class="overlay-container">
