--- a/views/home.ejs
+++ b/views/home.ejs
@@ -72,7 +72,7 @@
         </div>
         <p class="animated bounceInLeft" style="animation-delay: 1s">Bienvenue sur No Brain No Gain, le site de jeux
           de jeux de réflexion parfait pour occuper votre temps libre.</p><br>
-        <p class="animated bounceInRight" style="animation-delay: 1.5s"><a href="./login.html"><button
+        <p class="animated bounceInRight" style="animation-delay: 1.5s"><a href="/Authentification"><button
               class="button"><span>
                 Inscrivez vous !</span></button></a></p>
       </div>
