--- a/views/home.ejs
+++ b/views/home.ejs
@@ -21,44 +21,13 @@
   <!-- Fichier CSS version TEST-->
 
   <link href="./css/style.css" rel="stylesheet">
+  <link href="./css/navbar.css" rel="stylesheet">
 
 </head>
 
 <body>
 
-
-  <!-- Début NavBar -->
-
-  <nav id="nav" class="navbar navbar-expand-lg navbar-light fixed-top bgcolor">
-    <div class="container">
-      <p class="alpha">NO BRAIN NO GAIN</p><button aria-controls="navbarSupportedContent" aria-expanded="false"
-        aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarSupportedContent"
-        data-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#cover">Accueil</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#games">Jeux</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#footer">Contact</a>
-          </li>
-          <% if(isLoggedIn) { %>
-            <li class="nav-item">
-              <a class="nav-link" href="">Profil</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/logout">Déconnexion</a>
-            </li>
-            <% } %>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
-  <!-- Fin NavBar -->
+  <%- include("../views/layouts/navbar.ejs") %>
 
 
 
