--- a/public/css/login.css
+++ b/public/css/login.css
@@ -89,7 +89,7 @@ input {
 	width: 100%;
 }
 
-.container {
+.container-log {
 	background-color: #fff;
 	border-radius: 10px;
   	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
