--- a/views/authentification.ejs
+++ b/views/authentification.ejs
@@ -24,7 +24,7 @@
 
 <body>
 
-    <%- include("../views/layouts/navbar.ejs", {isLoggedIn: false} ) %>
+    <%- include("../views/layouts/navbar.ejs", {isLoggedIn: false, button: ''} ) %>
 
     <div class="container" id="container">
         <div class="form-container sign-up-container">
