--- a/views/home.ejs
+++ b/views/home.ejs
@@ -27,9 +27,7 @@
 
 <body>
 
-  <%- include("../views/layouts/navbar.ejs") %>
-
-
+  <%- include('../views/layouts/navbar.ejs', {button: 'home'}); -%>
 
   <!-- Début du contenu de la page -->
 
