--- a/views/authentification.ejs
+++ b/views/authentification.ejs
@@ -24,9 +24,9 @@
 
 <body>
 
-    <%- include("../views/layouts/navbar.ejs", {isLoggedIn: false, button: ''} ) %>
+    <%- include("../views/layouts/navbar.ejs", {isLoggedIn: false, button: 'login'} ) %>
 
-    <div class="container-log" id="container">
+    <div class="container" id="container">
         <div class="form-container sign-up-container">
             <form method="POST">
                 <h1>Créer un compte</h1>
