--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -8,8 +8,14 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#cover">Accueil</a>
+          <a class="nav-link" href="/">Accueil</a>
         </li>
+
+        <% if(button=='login') { %>
+          <li class="nav-item">
+            <a class="nav-link" href="#games">Jeux</a>
+          </li>
+        <% } %>
 
         <% if(button=='home' ) { %>
           <li class="nav-item">
@@ -21,8 +27,13 @@
           <% } %>
 
             <% if(isLoggedIn) { %>
-              <%- include('../views/buttons/loggedIn.ejs'); -%>
-                <% } %>
+              <li class="nav-item">
+                <a class="nav-link" href="">Profil</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/logout">Déconnexion</a>
+              </li>
+              <% } %>
 
       </ul>
     </div>
