--- a/public/css/login.css
+++ b/public/css/login.css
@@ -46,8 +46,8 @@ a {
 
 button {
 	border-radius: 20px;
-	border: 1px solid #FF4B2B;
-	background-color: #FF4B2B;
+	border: 1px solid #17374e;
+	background-color: #17374e;
 	color: #FFFFFF;
 	font-size: 12px;
 	font-weight: bold;
@@ -89,16 +89,10 @@ input {
 	width: 100%;
 }
 
-.container-log {
-	background-color: #fff;
-	border-radius: 10px;
-  	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
-			0 10px 10px rgba(0,0,0,0.22);
-	position: relative;
-	overflow: hidden;
-	width: 768px;
+.container {
+	width: 100%;
 	max-width: 100%;
-	min-height: 480px;
+	min-height: 100%;
 }
 
 .form-container {
@@ -160,9 +154,9 @@ input {
 }
 
 .overlay {
-	background: #FF416C;
-	background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
-	background: linear-gradient(to right, #FF4B2B, #FF416C);
+	background: #17374e;
+	background: -webkit-linear-gradient(to right, #17374e, #17374e);
+	background: linear-gradient(to right, #17374e, #17374e);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: 0 0;
