--- a/public/css/login.css
+++ b/public/css/login.css
@@ -12,8 +12,7 @@ body {
 	align-items: center;
 	flex-direction: column;
 	font-family: 'Montserrat', sans-serif;
-	
-	
+		
 }
 
 h1 {
@@ -92,7 +91,7 @@ input {
 .container {
 	width: 100%;
 	max-width: 100%;
-	
+	min-height: 100%;
 }
 
 .form-container {
