--- a/views/authentification.ejs
+++ b/views/authentification.ejs
@@ -33,17 +33,24 @@
             <div class="form-container sign-up-container">
                 <form method="POST">
                     <h1>Créer un compte</h1>
-                    <input type="texte" placeholder="Nom" />
-                    <input type="email" placeholder="Email" />
-                    <input type="mot de passe" placeholder="Mot de passe" />
+                    <input type="texte" placeholder="Nom" name="nameRegister" required>
+                    <input type="email" placeholder="Email" name="emailRegister" required>
+                    <input type="password" placeholder="Mot de passe" name="passwordRegister" required>
+                    <% if (erreurRegister == 'err') { %>
+                        <%- include('../views/errors/RegisterErr.ejs') -%>
+                    <% } %>
                     <button type="submit">Inscrivez-vous!</button>
                 </form>
             </div>
             <div class="form-container sign-in-container">
                 <form method="POST">
                     <h1>Connectez vous</h1>
-                    <input type="email" placeholder="Email" name="email" />
-                    <input type="mot de passe" placeholder="Mot de passe" name="password" />
+                    <input type="email" placeholder="Email" name="emailLogin" required>
+                    <input type="password" placeholder="Mot de passe" name="passwordLogin" required>
+
+                    <% if (erreurLogin == 'err') { %>
+                        <%- include('../views/errors/loginErr.ejs') -%>
+                    <% } %>
                     <button type="submit">Se connecter</button>
                 </form>
             </div>
