--- a/views/home.ejs
+++ b/views/home.ejs
@@ -33,16 +33,12 @@
 
     <div id="cover">
       <div class="container-md">
-        <img id="img" alt="First slide" class="d-block w-100" src="./img/Arcade.png">
+        <img id="img" alt="First slide" class="d-block w-100" src="./img/arcadeTest.jpg">
         <div class="carousel-caption d-none d-md-block">
           <div id="container">
-
-
-            <p class="title"><a href="/">
-                No Brain No Gain
-              </a></p>
+            <p class="title"><a href="/">No Brain No Gain</a></p>
           </div>
-          <p class="animated bounceInLeft" style="animation-delay: 1s">Bienvenue sur No Brain No Gain, le site de jeux
+          <p class="animated bounceInLeft font-italic" style="animation-delay: 1s">Bienvenue sur No Brain No Gain, le site de jeux
             de jeux de réflexion parfait pour occuper votre temps libre.</p><br>
           <% if(!isLoggedIn) { %>
             <p class="animated bounceInRight" style="animation-delay: 1.5s"><a href="/Authentification"><button
