accueil new design

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -33,12 +33,13 @@
 
     <div id="cover">
       <div class="container-md">
-        <img id="img" alt="First slide" class="d-block w-100" src="./img/arcadeTest.jpg">
+        <img id="img" alt="First slide" class="d-block w-100" src="./img/Arcade.jpg">
         <div class="carousel-caption d-none d-md-block">
           <div id="container">
             <p class="title"><a href="/">No Brain No Gain</a></p>
           </div>
-          <p class="animated bounceInLeft font-italic" style="animation-delay: 1s">Bienvenue sur No Brain No Gain, le site de jeux
+          <p class="animated bounceInLeft font-italic" style="animation-delay: 1s">Bienvenue sur No Brain No Gain, le
+            site de jeux
             de jeux de réflexion parfait pour occuper votre temps libre.</p><br>
           <% if(!isLoggedIn) { %>
             <p class="animated bounceInRight" style="animation-delay: 1.5s"><a href="/Authentification"><button
@@ -51,166 +52,61 @@
       </div>
     </div>
 
-    <div id="games">
-      <div class="container-fluid">
-        <div class="px-lg-5">
+    <div class="games">
+      <div class="titleG">
+        <span class="titleGames">NOS JEUX</span>
 
-          <!-- For demo purpose -->
-          <div class="row py-5">
-            <div class="col-lg-12 mx-auto">
-              <div class="text-white p-5 shadow-sm rounded banner">
-                <h1 class="display-4">Nos Jeux</h1>
+        <div class="container-fluid">
+          <div class="px-lg-5">
+            <div class="row">
 
-              </div>
-            </div>
-          </div>
-          <!-- End -->
-
-          <!-- End -->
-
-          <div class="row">
-            <!-- Gallery item -->
-            <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-              <div class="bg-white rounded shadow-sm"><img src="img/chessLogo.jpg" alt="" class="img     card-img-top">
-                <div class="p-4">
-                  <h5> <a href="#" class="text-dark">Red paint cup</a></h5>
+              <!-- Gallery item -->
+              <div class="col-xl col-lg-4 col-md-6 mb-4">
+                <div class="bg-white rounded shadow-sm"><img src="./img/jeux-images/sudoku.jpg" alt="Sudoku"
+                    class="img-fluid card-img-top">
+                  <h5> <a href="#" class="text-dark">Sudoku</a></h5>
                   <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-                  <div class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4">
-                    <p class="small mb-0"><i class="fa fa-picture-o mr-2"></i><span class="font-weight-bold">JPG</span>
-                    </p>
-                    <div class="badge badge-danger px-3 rounded-pill font-weight-normal">New</div>
-                  </div>
+                  <a href=""><button class="buttonGames"><span>Jouez !</span></button></a>
                 </div>
               </div>
-            </div>
-            <!-- End -->
+              <!-- End -->
 
-            <!-- Gallery item -->
-            <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-              <div class="bg-white rounded shadow-sm"><img
-                  src="https://res.cloudinary.com/mhmd/image/upload/v1556294927/cody-davis-253928-unsplash_vfcdcl.jpg"
-                  alt="" class="img card-img-top">
-                <div class="p-4">
-                  <h5> <a href="#" class="text-dark">Blorange</a></h5>
+              <!-- Gallery item -->
+              <div class="col-xl col-lg-4 col-md-6 mb-4">
+                <div class="bg-white rounded shadow-sm"><img src="./img/jeux-images/Dames.jpg" alt="Sudoku"
+                    class="img-fluid card-img-top">
+                  <h5> <a href="#" class="text-dark">Sudoku</a></h5>
                   <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-                  <div class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4">
-                    <p class="small mb-0"><i class="fa fa-picture-o mr-2"></i><span class="font-weight-bold">PNG</span>
-                    </p>
-                    <div class="badge badge-primary px-3 rounded-pill font-weight-normal">Trend</div>
-                  </div>
+                  <a href=""><button class="buttonGames"><span>Jouez !</span></button></a>
                 </div>
               </div>
-            </div>
-            <!-- End -->
+              <!-- End -->
 
-            <!-- Gallery item -->
-            <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-              <div class="bg-white rounded shadow-sm"><img
-                  src="https://res.cloudinary.com/mhmd/image/upload/v1556294928/nicole-honeywill-546848-unsplash_ymprvp.jpg"
-                  alt="" class="img     card-img-top">
-                <div class="p-4">
-                  <h5> <a href="#" class="text-dark">And She Realized</a></h5>
+            </div>
+
+            <div class="row">
+              <!-- Gallery item -->
+              <div class="col-xl col-lg-4 col-md-6 mb-4">
+                <div class="bg-white rounded shadow-sm"><img src="./img/jeux-images/echecs.jpg" alt="Sudoku"
+                    class="img-fluid card-img-top">
+                  <h5> <a href="#" class="text-dark">Sudoku</a></h5>
                   <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-                  <div class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4">
-                    <p class="small mb-0"><i class="fa fa-picture-o mr-2"></i><span class="font-weight-bold">JPG</span>
-                    </p>
-                    <div class="badge badge-warning px-3 rounded-pill font-weight-normal text-white">Featured</div>
-                  </div>
+                  <a href=""><button class="buttonGames"><span>Jouez !</span></button></a>
                 </div>
               </div>
-            </div>
-            <!-- End -->
+              <!-- End -->
 
-            <!-- Gallery item -->
-            <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-              <div class="bg-white rounded shadow-sm"><img
-                  src="https://res.cloudinary.com/mhmd/image/upload/v1556294927/dose-juice-1184444-unsplash_bmbutn.jpg"
-                  alt="" class="img card-img-top">
-                <div class="p-4">
-                  <h5> <a href="#" class="text-dark">DOSE Juice</a></h5>
+              <!-- Gallery item -->
+              <div class="col-xl col-lg-4 col-md-6 mb-4">
+                <div class="bg-white rounded shadow-sm"><img src="./img/jeux-images/morpion.jpg" alt="Sudoku"
+                    class="img-fluid card-img-top">
+                  <h5> <a href="#" class="text-dark">Sudoku</a></h5>
                   <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-                  <div class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4">
-                    <p class="small mb-0"><i class="fa fa-picture-o mr-2"></i><span class="font-weight-bold">JPEG</span>
-                    </p>
-                    <div class="badge badge-success px-3 rounded-pill font-weight-normal">Hot</div>
-                  </div>
+                  <a href=""><button class="buttonGames"><span>Jouez !</span></button></a>
                 </div>
               </div>
+              <!-- End -->
             </div>
-            <!-- End -->
-
-            <!-- Gallery item -->
-            <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-              <div class="bg-white rounded shadow-sm"><img
-                  src="https://res.cloudinary.com/mhmd/image/upload/v1556294926/cody-davis-253925-unsplash_hsetv7.jpg"
-                  alt="" class="img     card-img-top">
-                <div class="p-4">
-                  <h5> <a href="#" class="text-dark">Pineapple</a></h5>
-                  <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-                  <div class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4">
-                    <p class="small mb-0"><i class="fa fa-picture-o mr-2"></i><span class="font-weight-bold">PNG</span>
-                    </p>
-                    <div class="badge badge-primary px-3 rounded-pill font-weight-normal">New</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- End -->
-
-            <!-- Gallery item -->
-            <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-              <div class="bg-white rounded shadow-sm"><img
-                  src="https://res.cloudinary.com/mhmd/image/upload/v1556294928/tim-foster-734470-unsplash_xqde00.jpg"
-                  alt="" class="img card-img-top">
-                <div class="p-4">
-                  <h5> <a href="#" class="text-dark">Yellow banana</a></h5>
-                  <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-                  <div class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4">
-                    <p class="small mb-0"><i class="fa fa-picture-o mr-2"></i><span class="font-weight-bold">JPG</span>
-                    </p>
-                    <div class="badge badge-warning px-3 rounded-pill font-weight-normal text-white">Featured</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- End -->
-
-
-            <!-- Gallery item -->
-            <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-              <div class="bg-white rounded shadow-sm"><img
-                  src="https://res.cloudinary.com/mhmd/image/upload/v1556294928/nicole-honeywill-546848-unsplash_ymprvp.jpg"
-                  alt="" class="img card-img-top">
-                <div class="p-4">
-                  <h5> <a href="#" class="text-dark">Lorem ipsum dolor</a></h5>
-                  <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-                  <div class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4">
-                    <p class="small mb-0"><i class="fa fa-picture-o mr-2"></i><span class="font-weight-bold">JPG</span>
-                    </p>
-                    <div class="badge badge-warning px-3 rounded-pill font-weight-normal text-white">Featured</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- End -->
-
-            <!-- Gallery item -->
-            <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-              <div class="bg-white rounded shadow-sm"><img
-                  src="https://res.cloudinary.com/mhmd/image/upload/v1556294927/dose-juice-1184444-unsplash_bmbutn.jpg"
-                  alt="" class="img     card-img-top">
-                <div class="p-4">
-                  <h5> <a href="#" class="text-dark">Lorem ipsum dolor</a></h5>
-                  <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-                  <div class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4">
-                    <p class="small mb-0"><i class="fa fa-picture-o mr-2"></i><span class="font-weight-bold">JPEG</span>
-                    </p>
-                    <div class="badge badge-success px-3 rounded-pill font-weight-normal">Hot</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- End -->
 
           </div>
         </div>
