--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:900i&display=swap');
+
 html, body {
 	margin: 0;
 	padding: 0;
@@ -117,59 +119,80 @@ p a {
 
 /* Début Contenu de la page */
 
-h2 {
+
+.titleGames {
+  font-family: 'Montserrat', sans-serif;
+  transform: translate(-50%, -50%);
+  font-size:120px;
+	letter-spacing:0.1em;
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke-width: 3px;
+  -webkit-text-stroke-color: #000000;
+  text-shadow: 
+						8px 8px #76cbe6,
+						20px 20px #000000;
+}
+
+.titleG {
+	margin-top: 100px;
+	margin-bottom: 50px;
 	text-align: center;
-	margin-top: 2em;
-	margin-bottom: 10px;
+}
+
+
+/* Début bouton jouer */
+
+.buttonGames {
+	border-radius: 100px;
+	background-color: #17374e;
+	border: 2px solid white;
+	color: white;
+	font-size: 16px;
 	text-transform: uppercase;
-	font-family: 'Trebuchet MS', Helvetica, sans-serif;
-	font-size: 45px;
-	color: #2C3E50;
+	letter-spacing: 2px;
+	line-height: 1.7em;
+	padding: 4px 50px 4px 50px;
+	margin-bottom: 56px;
+	margin-top: 15px;
+	font-weight: bold;
 }
 
-.img-fluid {
-	margin: 0 50px 10em 50px;
-	max-width: 100%;
-	max-height: 100%;
-	border-radius: 30px;
+.buttonGames a {
+	text-decoration: none;
+	color: white;
+	font-weight: 600;
+	font-family: "Raleway", sans-serif;
 }
 
-.icon {
-	width: 60px auto;
-	margin-bottom: 9em;
-	display: block;
-	width: 6em;
-	color: #2C3E50;
-	text-align: center;
+.buttonGames span {
+	cursor: pointer;
+	display: inline-block;
+	position: relative;
+	transition: 0.3s;
 }
 
-hr {
-	margin: 90px 0 0;
-	width: 10%;
-	height: 5px;
-	background-color: #2c3e50;
-	border-radius: 20px;
+.buttonGames span:after {
+	content: '\2BC8';
+	font-size: 10px;
+	position: absolute;
+	opacity: 0;
+	top: 0;
+	right: -20px;
+	transition: 0.3s;
 }
 
-hr.gauche {
-	float: left;
+.buttonGames:hover span {
+	padding-right: 25px;
 }
 
-hr.droite {
-	float: right;
+.buttonGames:hover span:after {
+	opacity: 1;
+	right: 0;
 }
 
-.banner {
-	background: #a770ef;
-	background: -webkit-linear-gradient(to right, #a770ef, #cf8bf3, #fdb99b);
-	background: linear-gradient(to right, #a770ef, #cf8bf3, #fdb99b);
-}
+/* Fin bouton jouer */
 
-.display-4 {
-	text-align: center;
-	text-transform: uppercase;
-	color: black;
-}
+
 
 /* Fin Contenu de la page */
 
@@ -528,4 +551,4 @@ a:hover {
 
   /* Fin animation footer */
 
-/* Fin footer */
+Fin footer
