--- a/views/home.ejs
+++ b/views/home.ejs
@@ -52,66 +52,66 @@
       </div>
     </div>
 
+    <!-- Début Jeux -->
+
     <div class="games">
-      <div class="titleG">
-        <span class="titleGames">NOS JEUX</span>
+      <span class="titleGames">NOS JEUX</span>
+      <div class="container-fluid">
+        <div class="px-lg-5">
 
-        <div class="container-fluid">
-          <div class="px-lg-5">
-            <div class="row">
-
-              <!-- Gallery item -->
-              <div class="col-xl col-lg-4 col-md-6 mb-4">
-                <div class="bg-white rounded shadow-sm"><img src="./img/jeux-images/sudoku.jpg" alt="Sudoku"
-                    class="img-fluid card-img-top">
-                  <h5> <a href="#" class="text-dark">Sudoku</a></h5>
-                  <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-                  <a href=""><button class="buttonGames"><span>Jouez !</span></button></a>
-                </div>
+          <div class="row">
+            <!-- Gallery item -->
+            <div class="col-xl col-lg-4 col-md-6 mb-4">
+              <div class="bg-white rounded shadow-sm"><img src="./img/jeux-images/sudoku.jpg" alt="Sudoku"
+                  class="img-fluid card-img-top">
+                <h5> <a href="#" class="text-dark">Sudoku</a></h5>
+                <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                <a href=""><button class="buttonGames"><span>Jouez !</span></button></a>
               </div>
-              <!-- End -->
-
-              <!-- Gallery item -->
-              <div class="col-xl col-lg-4 col-md-6 mb-4">
-                <div class="bg-white rounded shadow-sm"><img src="./img/jeux-images/Dames.jpg" alt="Sudoku"
-                    class="img-fluid card-img-top">
-                  <h5> <a href="#" class="text-dark">Sudoku</a></h5>
-                  <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-                  <a href=""><button class="buttonGames"><span>Jouez !</span></button></a>
-                </div>
-              </div>
-              <!-- End -->
-
             </div>
+            <!-- End -->
 
-            <div class="row">
-              <!-- Gallery item -->
-              <div class="col-xl col-lg-4 col-md-6 mb-4">
-                <div class="bg-white rounded shadow-sm"><img src="./img/jeux-images/echecs.jpg" alt="Sudoku"
-                    class="img-fluid card-img-top">
-                  <h5> <a href="#" class="text-dark">Sudoku</a></h5>
-                  <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-                  <a href=""><button class="buttonGames"><span>Jouez !</span></button></a>
-                </div>
+            <!-- Gallery item -->
+            <div class="col-xl col-lg-4 col-md-6 mb-4">
+              <div class="bg-white rounded shadow-sm"><img src="./img/jeux-images/Dames.jpg" alt="Sudoku"
+                  class="img-fluid card-img-top">
+                <h5> <a href="#" class="text-dark">Sudoku</a></h5>
+                <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                <a href=""><button class="buttonGames"><span>Jouez !</span></button></a>
               </div>
-              <!-- End -->
-
-              <!-- Gallery item -->
-              <div class="col-xl col-lg-4 col-md-6 mb-4">
-                <div class="bg-white rounded shadow-sm"><img src="./img/jeux-images/morpion.jpg" alt="Sudoku"
-                    class="img-fluid card-img-top">
-                  <h5> <a href="#" class="text-dark">Sudoku</a></h5>
-                  <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-                  <a href=""><button class="buttonGames"><span>Jouez !</span></button></a>
-                </div>
-              </div>
-              <!-- End -->
             </div>
-
+            <!-- End -->
           </div>
+
+          <div class="row">
+            <!-- Gallery item -->
+            <div class="col-xl col-lg-4 col-md-6 mb-4">
+              <div class="bg-white rounded shadow-sm"><img src="./img/jeux-images/echecs.jpg" alt="Sudoku"
+                  class="img-fluid card-img-top">
+                <h5> <a href="#" class="text-dark">Sudoku</a></h5>
+                <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                <a href=""><button class="buttonGames"><span>Jouez !</span></button></a>
+              </div>
+            </div>
+            <!-- End -->
+
+            <!-- Gallery item -->
+            <div class="col-xl col-lg-4 col-md-6 mb-4">
+              <div class="bg-white rounded shadow-sm"><img src="./img/jeux-images/morpion.jpg" alt="Sudoku"
+                  class="img-fluid card-img-top">
+                <h5> <a href="#" class="text-dark">Sudoku</a></h5>
+                <p class="small text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                <a href=""><button class="buttonGames"><span>Jouez !</span></button></a>
+              </div>
+            </div>
+            <!-- End -->
+          </div>
+
         </div>
       </div>
     </div>
+
+    <!-- Fin Jeux -->
 
 
 
